package crypto.theblockchainpost.designpatterns.factory.factorymethodpattern.chicagostyle;

import crypto.theblockchainpost.designpatterns.factory.Pizza;

public class ChicagoPepperoniPizza extends Pizza {
}
