package crypto.theblockchainpost.designpatterns.factory.factorymethodpattern.newyork;

import crypto.theblockchainpost.designpatterns.factory.Pizza;

public class NewYorkCheesePizza extends Pizza {

    public NewYorkCheesePizza() {
        this.setPizzaName("Ny Style Sauce and Cheese Pizza");
        this.setDough("This Crust Dough");
        this.setSauce("Marinara Sauce");
    }

}
