package crypto.theblockchainpost.designpatterns.factory.factorymethodpattern.newyork;

import crypto.theblockchainpost.designpatterns.factory.Pizza;

public class NewYorkPepperoniPizza extends Pizza {
}
