package crypto.theblockchainpost.designpatterns.factory.simplefactory;

public enum PizzaType {

    CHEESE,
    PEPPERONI,
    CLAM,
    VEGGIE,

}
